# SystemC-figure-recognition-neural-network

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cpu.cpp  cpu.h  main.cpp  mem.cpp  model  wave.vcd
example/: cpu.h  main.cpp
src/: IORam.cpp  IORam.h  NetConfigRom.cpp  NetConfigRom.h  cpu.cpp  cpu.h  main.cpp  mem.cpp  mem.h  pe_core.cpp  pe_core.h  tinyint.h
src/PE/: dispatcher.h  pe.h
src/PE/pe_alis/: pe_core.cpp  pe_core.h
src/shared/: memory_bus.h  ram.h
